Contrast fixes

--- a/src/components/recomended-articles/sass/recomended-content.scss
+++ b/src/components/recomended-articles/sass/recomended-content.scss
@@ -116,7 +116,7 @@
 		.type {
 		    font-size: 18px;
 		    display: block;
-		    color:$grey-color05;
+		    color:$grey-color04;
 		    span {
 		    	&:after {
 		    		content: ',';
